Finished HTML section starting on css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		</head>
 	
 	<body>
+		<div>
 		<!-- Stating what the page is about in a  large header-->
 		<h1>Student Bio!</h1>
 
@@ -16,26 +17,52 @@
 		<img src="http://via.placeholder.com/350x150">
 		
 		<h3><u>About my self</u></h3>
-			Living in 
-
-			<!-- Link to google maps of Oakland Park -->
-			<a href="https://www.google.com/maps/place/Oakland+Park,+FL/@26.1800823,-80.1917245,13z/data=!3m1!4b1!4m5!3m4!1s0x88d90103c8d3816d:0xe399fd6e7c35ce69!8m2!3d26.1723065!4d-80.1319893" target="_blank">Oakland Park, FL, </a> 
-
-			my entire life I've grown extremely fond of the area watching it grow along side my self.
-			<br>
-			 I went to 
-
-			<!-- Linking my high schools page -->
-			<a href="http://www.fortlauderdalehigh.org" target="_blank">Fort Lauderdale High</a> 
 
 
+		<!-- This Section is for the actual bio about my self -->
+
+			<section>
+				<p>
+					<!-- alittl bit about my self -->
+					Living in 
+
+					<!-- Link to google maps of Oakland Park -->
+					<a href="https://www.google.com/maps/place/Oakland+Park,+FL/@26.1800823,-80.1917245,13z/data=!3m1!4b1!4m5!3m4!1s0x88d90103c8d3816d:0xe399fd6e7c35ce69!8m2!3d26.1723065!4d-80.1319893" target="_blank">Oakland Park, FL, </a> 
+
+					my entire life I've grown extremely fond of the area watching it grow along side my self.
+					<br>
+
+					 I went to 
+					<!-- Linking my high schools page -->
+					<a href="http://www.fortlauderdalehigh.org" target="_blank">Fort Lauderdale High</a>,
+					competed on the Track and Field team as a polevaulter reaching the best in our Region.
+					<br>
+
+					I plan to attend Georgia Tech right after our Bootcamp finishes in the summer, major in Computer Science and maybe even Physics. 
+					<br>
+
+					I love the beach and being outside but I also love coding so it's hard to balance but I mange to find the time for my passions.
+
+				</p>
+			</section>
+
+
+				<h3>Link to my Stuff!</h3>
+
+				<!-- This section is the links to my social media etc... -->
+				<section>
+					<!-- list with links to (in order) git hub, twitter, instagram -->
+						<li><a href="https://github.com/catander12" target="_blank">GitHub</a></li>
+
+						<li><a href="https://twitter.com/james_dimarco_" target="_blank">Twitter</a></li>
+
+						<li><a href="https://www.instagram.com/james_dimango_/" target="_blank">Instagram</a></li>
 
 
 
 
-
-
-
+				</section>
+		</div>
 	</body>
-	</html>
+</html>
 
