fixed style sheet location

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
 					 I went to 
 					<!-- Linking my high schools page -->
-					<a href="http://www.fortlauderdalehigh.org" target="_blank">Fort Lauderdale High</a>,
-					competed on the Track and Field team as a polevaulter reaching the best in our Region.
+					<a href="http://www.fortlauderdalehigh.org" target="_blank">Fort Lauderdale High</a>, for four years and competed on the Track and Field team as a polevaulter reaching the best in our Region.
 					<br>
 
 					I plan to attend Georgia Tech right after our Bootcamp finishes in the summer, major in Computer Science and maybe even Physics. 
