actually fixed it

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<head>
 			<!-- very clear title -->
 			<title>About me</title>
+
+			<!-- Link to css style sheet -->
+			<link rel="stylesheet" type="text/css" href="./css/style.css">
+
 		</head>
 	
 	<body>
