near finished product

--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
 		</head>
 	
 	<body>
-		<div>
 		<!-- Stating what the page is about in a  large header-->
+		<div id="bio">
 		<h1>Student Bio!</h1>
+		</div>
+		
+		<div class="left">
 
 		<h2><u>James W Dimarco II</u></h2>
 
 		<!-- Picture of my self-->
 		<img src="http://via.placeholder.com/350x150">
 		
-		<h3><u>About my self</u></h3>
+		<h3 id="about"><u>About my self</u></h3>
 
 
 		<!-- This Section is for the actual bio about my self -->
@@ -47,14 +50,18 @@
 					I love the beach and being outside but I also love coding so it's hard to balance but I mange to find the time for my passions.
 
 				</p>
+
 			</section>
 
+			</div>
 
-				<h3>Link to my Stuff!</h3>
+			<div class="right">
+				<h3 id="links">Link to my Stuff!</h3>
 
 				<!-- This section is the links to my social media etc... -->
 				<section>
 					<!-- list with links to (in order) git hub, twitter, instagram -->
+
 						<li><a href="https://github.com/catander12" target="_blank">GitHub</a></li>
 
 						<li><a href="https://twitter.com/james_dimarco_" target="_blank">Twitter</a></li>
