--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 			<title>About me</title>
 
 			<!-- Link to css style sheet -->
+			<link rel="stylesheet" type="text/css" href="./css/normalize.css">
 			<link rel="stylesheet" type="text/css" href="./css/style.css">
 
 		</head>
@@ -21,7 +22,7 @@
 		<h2><u>James W Dimarco II</u></h2>
 
 		<!-- Picture of my self-->
-		<img src="http://via.placeholder.com/350x150">
+		<img id="mePolevaulting" src="./img/pv.jpg">
 		
 		<h3 id="about"><u>About my self</u></h3>
 
